--- a/style.css
+++ b/style.css
@@ -27,6 +27,49 @@ a{
   background-color: #0f172a;
 }
 
+.header-wrap{
+  display: grid;
+  width: 100%;
+  height: 100%;
+  grid-template-columns: minmax(min-content,700px) 1fr;
+  grid-template-rows: 100px 1fr;
+  grid-template-areas: 
+    "search notif-name"
+    "welcome create";
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+}
+
+.searchbar{
+  grid-area: search;
+  display: grid;
+  grid-template-columns: min-content 500px;
+  grid-template-rows: min-content;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  padding-left: 20px;
+}
+
+input[type=text]{
+  outline: none;
+  margin: none;
+  border: none;
+  padding: 0px;
+  text-decoration: none;
+  border-radius: 50px;
+  height: 35px;
+  color: #020617;
+  padding-left: 10px;
+  font-size: 16px;
+}
+
+.searchbar > img{
+  width: 35px;
+  height: 35px;
+}
+
 .sidebar{
   background-color: #1e3a8a;
   grid-area: sidebar;
