--- a/style.css
+++ b/style.css
@@ -64,15 +64,16 @@ input[type=text]{
   color: #020617;
   padding-left: 10px;
   font-size: 16px;
-  
+  text-indent: 14px;
 }
 button,input[type=text]{
   outline: none;
-  margin: none;
+  margin: 0px;
   border: none;
   padding: 0px;
   text-decoration: none;
-  font-family: 'Roboto', sans-serif
+  font-family: 'Roboto', sans-serif;
+  box-shadow: 0px 8px 8px #000000;
 }
 
 .searchbar > img{
@@ -153,15 +154,16 @@ button,input[type=text]{
   color: #f1f5f9;
   font-size: 20px;
   width: 150px;
-  padding: 20px;
+  padding: 16px;
   border-radius: 30px;
   font-weight: 600;
-  box-shadow: 0 8px #020617;
+  box-shadow: 0 6px 5px #020617;
+  text-align: center;
 }
 .create > button:active{
   background: #1e3b8ad8;
   transform: translateY(3px);
-  box-shadow: 0 5px #000000;
+  box-shadow: 0 4px 5px #000000;
 }
 
 .sidebar{
