--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ a{
   grid-area: header;
   background: #0f172a;
   box-shadow: 0px 5px 5px #000000;
+  padding-bottom: 15px;
 }
 
 .header-wrap{
@@ -42,8 +43,7 @@ a{
   grid-template-areas: 
     "search notif-name"
     "welcome create";
-  align-items: center;
-  padding-bottom: 40px;
+  align-items: center;;
 }
 
 .searchbar{
@@ -65,6 +65,7 @@ input[type=text]{
   padding-left: 10px;
   font-size: 16px;
   text-indent: 14px;
+  background: #dadada;
 }
 button,input[type=text]{
   outline: none;
@@ -235,4 +236,63 @@ a,span{
   font-size: 26px;
   font-weight: 900;
   gap: 20px;
+}
+
+.content{
+  display: grid;
+  padding: 40px 20px 20px 20px;
+  grid-template-columns: 3fr 1fr;
+  grid-template-rows: min-content 1fr;
+  grid-template-areas: 
+    "header header"
+    "projects aside";
+  row-gap: 20px;
+}
+.content-title{
+  font-size: 24px;
+}
+
+.projects{
+  grid-area: projects;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(3,1fr);
+}
+
+.project-title{
+  color: #000000;
+  display: flex;
+  align-items: end;
+  font-size: 22px;
+  font-weight: 800;
+}
+.project{
+  display: grid;
+  grid-template-columns: .8fr;
+  grid-template-rows: repeat(3,min-content);
+  margin: 40px;
+  justify-content: center;
+  align-content: center;
+  background-color: #dadada;
+  border-radius: 10px;
+  box-shadow: 0px 10px 5px #000000,inset 5px 0px #1e3a8a;
+}
+
+.project > p{
+  color: #3e3e3e;
+  font-size: 18px;
+  width: 70%;
+}
+.iconwrapper{
+  display: flex;
+  gap: 12px;
+  justify-content: end;
+}
+.favorite{
+  width: 35px;
+  height: 35px;
+}
+.share{
+  width: 35px;
+  height: 35px;
 }
